23_architectures/arc3/kubernetes/flight/flight-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-mysql
  namespace: aodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-mysql
  template:
    metadata:
      labels:
        app: flight-mysql
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: flight-mysql-pvc
      containers:
        - name: mysql
          image: mysql:8.0.19
          args:
            - --lower_case_table_names=1
            - --skip-ssl
            - --character_set_server=utf8mb4
            - --explicit_defaults_for_timestamp
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql/
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  name: flight-mysql
  namespace: aodb
spec:
  selector:
    app: flight-mysql
  ports:
    - port: 3306
