23_architectures/arc3/kubernetes/flight/flight-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flight-virtualservice
  namespace: aodb
spec:
  hosts:
    - flight
  http:
    - route:
        - destination:
            host: flight
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
